Working version of the task, but superfical changes still needed

--- a/templates/ad.html
+++ b/templates/ad.html
@@ -40,16 +40,16 @@
 		<p>
 		Please disable pop-up blockers before continuing.
 		</p>
-		<p><a href="#" onClick="openwindow()">Ok, I understand, I'm read to start.</a></p>
+		<p><a href="#" onClick="openwindow()">Ok, I understand, I'm ready to start.</a></p>
 
 		{% else %}
 		<h1> Call for participants</h1>
-		<p>The Cognition and Computation Lab at New York University (NYU)
+		<p>The Human Cognition Lab at New York University (NYU)
 		is looking for online participants for a brief experiment on how
-		people learn. The only requirements are that you are at least 18
+		people view the relationship between words. The only requirements are that you are at least 18
 		years old and are a fluent English speaker.
 		</p>
-		<p>Example example, herp derp.
+		<p>
 		</p>
                 <p>This task can only be completed once. If you have already
                 completed this task before the system will not allow you to run
