--- a/templates/instruct.html
+++ b/templates/instruct.html
@@ -1,9 +1,12 @@
 
 <div class="instruct" id="main">
 	<h1>Instructions</h1>
-	<p>These are some instructions.
+	<p>
 	<div>
-		<p>Your task will be to something something something.
+		<p>For this task, you will be shown a pair of words. We would like you to rate the relatedness of the two words on a scale of 1 to 7. 1 means the words are “not at all related” and 7 means the words are “highly related.” Make your decision by pressing the corresponding number key on your keyboard. Please use all the numbers in the 1-7 scale, not just one or two.
+		<p>There is no right or wrong answer to these questions--we're just interested in your opinion. You have as much time as you want, but it is usually best to just go with your first reaction about how related the words are.
+		<p>Do not refresh this page or you may not be able to complete the task. 
+
 		<div class="prompt">When you're ready to continue, press <strong>Next</strong>.</div>
 
 	<input type="button" class="continue" id="Next" value="Next">
