--- a/templates/postquestionnaire.html
+++ b/templates/postquestionnaire.html
@@ -43,6 +43,35 @@
                     </select>
                 </td>
             </tr>
+            <tr class="question">
+                <td class="questiontext">
+                Is <b>English</b> your first language?
+                </td>
+                <td class="answer">
+                    <select id="language" name="language">
+                        <option value="y">Yes</option>
+                        <option value="n" SELECTED>No</option>
+                        
+                    </select>
+                </td>
+            </tr>
+            <tr class="question">
+                <td class="questiontext">
+                What is the <b>highest level of education</b> that you have completed?
+                </td>
+                <td class="answer">
+                    <select id="education" name="education">
+                        <option value="no-highschool">Did not complete high school</option>
+                        <option value="high school">High School/GED</option>
+                        <option value="some college">Some College</option>
+                        <option value="2-year college">2-year College Degree</option>
+                        <option value="4-year college">4-year College Degree</option>
+                        <option value="masters">Masters Degree</option>
+                        <option value="doctoral">Doctoral Degree</option>
+                        <option value="professional">Professional Degree (JD, MD)</option>
+                    </select>
+                </td>
+            </tr>
         </table>
     </form>
     <input type="button" class="continue" id="continue" value="Continue"></input>
