--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,4 @@
 <h1>Test Phase</h1>
-<div id="instructions">What color is this word?</div>
+<div id="instructions">How related are these words?</div>
 <div id="stim"></div>
 <div id="query"></div>
