--- a/static/css/task.css
+++ b/static/css/task.css
@@ -5,15 +5,15 @@ body {
 	background: black; /* #808090; */
 	color: white;
 	text-align: center;
-	font-family: Verdana, Helvetica, sans-serif;
+	font-family: Helvetica, Verdana, sans-serif;
 	margin: 0 auto;
         margin-top: 100px;
-	width: 800px;
+	width: 1000px;
 }
 
 h1 {
-        font-family: "Crimson Text";
-        font-size: 42pt;
+        font-family: Helvetica, Verdana, sans-serif;
+        font-size: 30pt;
         font-style: italic;
 }
 
@@ -62,6 +62,14 @@ strong {
 	margin-top: 30px;
 	width: 500px;
 }
+
+/* Task */
+#instructions {
+	/*text-align: center;*/
+	font-family: Helvetica, Verdana, sans-serif;
+	font-size: 28pt;
+}
+
 
 
 /* Questionnaire */
