--- a/templates/error.html
+++ b/templates/error.html
@@ -24,7 +24,7 @@
 
             <p>If you would like to receive partial compensation or feel you
             have reached this page in error, please email
-    	    <a href="mailto:gureckislab@gmail.com">gureckislab@gmail.com</a>
+    	    <a href="mailto:pac365@nyu.edu">pac365@nyu.edu</a>
     	    and send the following information:</p>
 	    <p>
             Error: #{{ errornum }}<br>
